Small CSS Fixes to improve readability and add 3rd Party plugin icons

--- a/assets/css/bp-icons-white.css
+++ b/assets/css/bp-icons-white.css
@@ -161,3 +161,10 @@ div#message p {
     background-repeat: no-repeat;
     background-position:-724px -332px; 
 }
+/* Third Party Plugin Icons */	  	
+li#nav-docs-groups-li a { 	
+	background-image: url("../images/icons/white.png");  	
+	background-position: 0 -502px;  	
+	background-repeat: no-repeat; 	
+	padding-left: 25px; 	
+}
