--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -77,7 +77,7 @@ div#item-header h2 span.highlight span {
 }
 div#item-header div#item-meta {
     font-size: 14px;
-    color: #aaa;
+    color: #777;
     padding-bottom: 10px;
     overflow: hidden;
     margin: 15px 0 5px 0;
@@ -203,7 +203,7 @@ div.item-list-tabs ul li a, div.item-list-tabs ul li span {
     padding: 8px 10px;
     text-decoration: none;
 }
-div.item-list-tabs ul li span { color: #aaa }
+div.item-list-tabs ul li span { color: #777 }
 div.item-list-tabs ul li a span {
     display: inline;
     padding: 0;
@@ -220,6 +220,7 @@ div.item-list-tabs ul li a span {
 div.item-list-tabs ul li.selected a, div.item-list-tabs ul li.selected a, div.item-list-tabs ul li.current a {
     background: none repeat scroll 0 0 #000;
     color: #DDDDDD;
+    font-weight: bold;
 }
 div.item-list-tabs ul li.selected a span, div.item-list-tabs ul li.current a span, div.item-list-tabs ul li a:hover span { background-color: #444 }
 div.item-list-tabs ul li.selected a span, div.item-list-tabs ul li.current a span { background-color: #555 }
@@ -616,7 +617,7 @@ body.activity-permalink .activity-list li .activity-header > p {
     font-size: 11px;
     margin: 0;
     border: none;
-    color: #aaa;
+    color: #777;
     text-decoration: underline;
 }
 a.bp-primary-action span, #reply-title small a span {
