--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -210,9 +210,6 @@ div.item-options {
 	margin-bottom: -16px;
 	margin-top: -16px;
 }
-.activity-list .activity-content .activity-inner p {
-	color: #777777;
-}
 div.item-list-tabs ul li a span {
 	-webkit-border-radius: 4px 4px 4px 4px;
 	-moz-border-radius: 4px 4px 4px 4px;
